deployment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: demo
    labels:
        registry: "oci"
