deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  template:
    spec: # Pod spec
      containers:
        - name: webappcontainer
          image: "webapp:latest"
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
